Limit some endpoints to rv terminal only
